Changelog
v1.0.0 – Initial Release (2025-08-27)

    Added homepage (index.html)

    Created, "About Us","Contact", "Gallery" and "Services" pages

    Added navigation bar and footer

    

v1.1.0 – Latest Update (2025-09-26)
    Added css for decoration, layout, and typography

    Improved mobile responsiveness

    Integrated Font Awesome icons

    Added responsive CSS styling




##Changelog
v1.0.0 – Initial Release (2025-08-27)

    Added homepage (index.html)

    Created, "About Us","Contact", "Gallery" and "Services" pages

    Added navigation bar and footer

    
v1.1.0 – Latest Update (2025-09-26)
    Added css for decoration, layout, and typography

    Improved mobile responsiveness

    Integrated Font Awesome icons

    Added responsive CSS styling


SEE WEBSITE RESPOSIVE DESIGN SNIPPETS:
![alt text](<../../asserts/website on a big screen.png>)
![alt text](<../../asserts/website on a desktop.png>)
![alt text](<../../asserts/image on the small screen.png>)
![alt text](<../../asserts/image for small screen.png>)
    


REFERENCES
    W3Schools. (2025, September 12). W3Schools. Retrieved from W3Schools: https://www.w3schools.com/cssref/pr_class_cursor.php

    Schools, W. (2025, September 16). W3 SCHOOLS. Retrieved from W3 SCHOOLS: https://www.w3schools.com/howto/howto_js_mobile_navbar.aspMichellesBoutique  