@@ -376,6 +376,16 @@ p {
     #lightbox img {
       width: 60%;
 }
+    #lightbox:target {
+      display: flex;
+}
+/* End of LightBox Styling */
+.timestamp{
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: medium;
+    text-align: center;
+}
 
 
 
